added pictures and styles

--- a/catpix.html
+++ b/catpix.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
     <title>My Favorite Dogs Pics</title>
   </head>
   <body>
-    <h1>Some <strong>Awesome</strong> Dogs!</h1>
+    <h1 class="fun">Some Awesome Dogs!</h1>
       <ul>
-        <li> Ross <br><img src="img/mini.jpg" alt="Miniature Schnauzer"</li>
-        <li> Dave <br><img src="img/dave.jpg" alt="The dog named dave"</li>
+        <li class="hi"> Ross <br><img src="img/mini.jpg" alt="Miniature Schnauzer"</li>
+        <li class="hi"> Dave <br><img src="img/dave.jpg" alt="The dog named dave"</li>
       </ul>
 
-      <h2> Here are some <em>links</em> to favorite dog websites</h2>
+      <h2 class="hi"> Here are some <em>links</em> to favorite dog websites</h2>
         <ol>
           <li> <a href="http://www.vetstreet.com/dogs/"> Dog breeds
           <li> <a href="https://www.petfinder.com/dog-breeds/"> Pet Finder
